@@ -73,6 +73,7 @@
     * 4228 FIX: Context links to HW/SW inventory views are only shown when useful
     * 4280 FIX: Interactive login is now denied for automation users...
     * 4307 FIX: Fixed wrong filters in Eventviews linked by Tactical Overview
+    * 4282 FIX: Fixed rendering of perfometers when no RRDs exist yet
 
     WATO:
     * 4142 New extended search dialog for rulesets and rules...
